lbdb (0.42) unstable; urgency=medium

  * m_gpg, m_pgp[25]: extend allowed real name length from 27 to 47 chars
    (Closes: #825333).

 -- Roland Rosenfeld <roland@debian.org>  Fri, 27 May 2016 19:52:06 +0200

lbdb (0.41) unstable; urgency=medium

  * Remove CVS $Id$ tags and the like, which don't work with git.
  * Apply several patches by Lucas Hoffmann:
    - m_wanderlust: Fix variable name.
    - m_gnomecard, m_pine: Remove needless backslashes from embedded AWK.
    - lbdbq: Optimize counting lines.
    - lbdbq: Remove unreached break after exit.
  * Upgrade to Standards-Version 3.9.7 (no changes).
  * Update debian/copyright.
  * fetchaddr: avoid segfault on empty lines (Closes: #715901).
  * fetchaddr: change real name length limit from 30 to 70.  Thanks to
    Andrey Skvortsov for providing a patch (Closes: #780532).
  * vcquery: order N: field: Prefixes GivenName AddName FamilyName Suffix
    (Closes: #578155).
  * Remove lbdb.spec on clean target.
  * Move LIBICONV linking to the end of the cc call to make cygwin happy.
  * Substitute ${prefix} in @sysconfdir@ in mutt_ldap_query.pl.
  * Fix more bashisms (Thanks to Thorsten Glaser).
  * Update config.guess and config.sub.
  * Optimize autoconf to get version from Debian changelog.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 05 Mar 2016 11:54:15 +0100

lbdb (0.40) unstable; urgency=medium

  * Upgrade to Standards-Version 3.9.6 (no changes).
  * Avoid gpg trustdb check in m_gpg, since this may take a long time
    while lbdb is not responsible.  Thanks to Gregor Zattler for providing
    a patch (Closes: #805235).
  * mutt_ldap_query: escape parentheses, since perl 5.22 complains about
    this otherwise.  Thanks to Olivier Mehani and Francois Charlier.
    (Closes: #812785).  This also solves launchpad bug 1539774 and RedHat
    bug 1259881.
  * Update emacs support (Add dependency on emacsen-common >=2.0.8, add
    emacsen-compat).
  * Run wrap-and-sort.
  * Fix several man page typos.
