@@ -1,0 +1,12 @@
+lbdb (0.42) unstable; urgency=medium
+
+  lbdb-fetchaddr/m_inmail default charset was changed to UTF-8.
+  To avoid problems on upgrading, the database file name was changed from
+  $HOME/.lbdb/m_inmail.list to $HOME/.lbdb/m_inmail.utf-8.  If you want
+  to keep your old (ISO-8859-15 encoded) database, you can just append
+  it to the new file by
+     cd $HOME/.lbdb
+     iconv -f iso-8859-15 -t utf-8 < m_inmail.list >> m_inmail.utf-8
+
+ -- Roland Rosenfeld <roland@debian.org>  Sun, 25 Sep 2016 13:46:39 +0200
+
