@@ -1,7 +1,7 @@
 #! @SH@
 #
 #     Copyright (C) 1998-2000  Thomas Roessler <roessler@guug.de>
-#                   1999-2005  Roland Rosenfeld <roland@spinnaker.de>
+#                   1999-2016  Roland Rosenfeld <roland@spinnaker.de>
 # 
 #     This program is free software; you can redistribute it and/or modify
 #     it under the terms of the GNU General Public License as published by
@@ -21,7 +21,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 
-m_inmail_db=$HOME/.lbdb/m_inmail.list
+m_inmail_db=$HOME/.lbdb/m_inmail.utf-8
 
 m_inmail_query()
 {
